--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h2>Contact Us</h2>
             <p class="lead">Need help with your lawnmower? Contact us today!</p>
             <p><strong>Phone:</strong> <a href="tel:+15804014940">(580) 401-4940</a></p>
-            <p><strong>Address:</strong> 200 North Hayes Corner Rondolph, Enid, OK 73701</p>
+            <p><strong>Address:</strong> 200 North Hayes Corner W Rondolph, Enid, OK 73701</p>
             <!--<a href="mailto:info@oldschoollawnmowershop.com" class="btn btn-primary">Email Us</a>-->
         </div>
     </section>
